Add hyperion support

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="controls">
-    <div id="lights" class="lights"></div>
+    <!--
+    <div id="toggleLights" class="lights"></div>
+    -->
   </div>
   <div class="video-container container">
     <video autoplay muted loop id="background-video">
