--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   </div>
   <div class="video-container container">
     <video autoplay muted loop id="background-video">
-      <source src="assets/video3.mp4" type="video/mp4">
+      <source src="assets/video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="item">
@@ -30,7 +30,7 @@
     <div class="item">
       <div id="youtube" class="image-button youtube"></div>
     </div>
-    <div class="item"></div>
+    <div class="item">
       <div id="steam" class="image-button steam"></div>
     </div>
   </div>
